First push online

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -62,6 +62,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
+                    <div style="margin-bottom: 30px;">
+                        <p>Le Hameau champêtre, c'est un projet bâtit avec une conscience de l'environnement qui l'entoure ! Avec un parc où on retrouve un petit lac, le projet saura vous charmer dès votre arrivée ! Dans un emplacement calme, mais facilement accessible, il s'agit de l'endroit idéal pour toute personne rêvant d'avoir son propre petit hâvre de paix ! Pour une autoconstruction ou bien pour une construction neuve faite par un contracteur, les terrains sont facilement accessibles grâce à la construction d'une nouvelle route, Venez voir notre projet et laissez vous charmer par l'ambiance paisible du Hameau Champêtre.  </p>
+                    </div>
                     <div class="section-title">
                         <h2>Nos terrains</h2>
                         <div id="terrains">
@@ -171,62 +174,62 @@
             </div>
             <div id="faits" class="row call-to-area-text">
                 <!-- START SINGLE SERVICE DESIGN AREA -->
-                <div class="col-md-4 col-sm-6 col-xs-12 wow fadeInUp" data-wow-delay=".2s">
+                <div class="col-md-4 col-sm-6 col-xs-12 service-col wow fadeInUp" data-wow-delay=".2s">
                     <div class="single-service">
                         <div class="service-icon"><i class="icon-superficie" aria-hidden="true"></i>
                         </div>
-                        <h4>Superficie du terrain</h4>
-                        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+                        <h4>Superficie des terrains</h4>
+                        <p>Terrains de 2900 mètres carrés (30 000 pi/ca) et plus.</p>
                     </div>
                 </div>
                 <!-- / END SINGLE SERVICE DESIGN AREA -->
                 <!-- START SINGLE SERVICE DESIGN AREA -->
-                <div class="col-md-4 col-sm-6 col-xs-12 wow fadeInUp" data-wow-delay=".4s">
+                <div class="col-md-4 col-sm-6 col-xs-12 service-col wow fadeInUp" data-wow-delay=".4s">
                     <div class="single-service">
                         <div class="service-icon"><i class="icon-localisation" aria-hidden="true"></i>
                         </div>
                         <h4>Localisation</h4>
-                        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+                        <p>C'est le meilleur des deux mondes; des terains en nature avec tous les services à proximité. À seulement 10 minutes de Lachute! 35 minutes seulement de Laval!</p>
                     </div>
                 </div>
                 <!-- / END SINGLE SERVICE DESIGN AREA -->
                 <!-- START SINGLE SERVICE DESIGN AREA -->
-                <div class="col-md-4 col-sm-6 col-xs-12 wow fadeInUp" data-wow-delay=".6s">
+                <div class="col-md-4 col-sm-6 col-xs-12 service-col wow fadeInUp" data-wow-delay=".6s">
                     <div class="single-service">
                         <div class="service-icon"><i class="fa fa-tree" aria-hidden="true"></i>
                         </div>
                         <h4>Ambiance</h4>
-                        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+                        <p>Avec des terrains boisés et privés, le Hameau offre une amiance apaisante.</p>
                     </div>
                 </div>
                 <!-- / END SINGLE SERVICE DESIGN AREA -->
                 <!-- START SINGLE SERVICE DESIGN AREA -->
-                <div class="col-md-4 col-sm-6 col-xs-12 wow fadeInUp" data-wow-delay=".2s">
+                <div class="col-md-4 col-sm-6 col-xs-12 service-col wow fadeInUp" data-wow-delay=".2s">
                     <div class="single-service">
                         <div class="service-icon"><i class="icon-vie-quartier" aria-hidden="true"></i>
                         </div>
                         <h4>Vie de quartier</h4>
-                        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+                        <p>Avec 29 terrains disponibles dans le projet, c'est l'idéal pour une vie de quartier paisible.</p>
                     </div>
                 </div>
                 <!-- / END SINGLE SERVICE DESIGN AREA -->
                 <!-- START SINGLE SERVICE DESIGN AREA -->
-                <div class="col-md-4 col-sm-6 col-xs-12 wow fadeInUp" data-wow-delay=".4s">
+                <div class="col-md-4 col-sm-6 col-xs-12 service-col wow fadeInUp" data-wow-delay=".4s">
                     <div class="single-service">
                         <div class="service-icon"><i class="fa fa-tint" aria-hidden="true"></i>
                         </div>
                         <h4>Parc avec étang</h4>
-                        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+                        <p>Un espace créé pour les résidants dans le but de leur permettre de relaxer et de profiter de la brise fraîche du Hameau Champêtre.</p>
                     </div>
                 </div>
                 <!-- / END SINGLE SERVICE DESIGN AREA -->
                 <!-- START SINGLE SERVICE DESIGN AREA -->
-                <div class="col-md-4 col-sm-6 col-xs-12 wow fadeInUp" data-wow-delay=".6s">
+                <div class="col-md-4 col-sm-6 col-xs-12 service-col wow fadeInUp" data-wow-delay=".6s">
                     <div class="single-service">
                         <div class="service-icon"><i class="icon-financement" aria-hidden="true"></i>
                         </div>
                         <h4>Financement disponible</h4>
-                        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+                        <p>Financement hypothécaire disponible, offert par la caisse.</p>
                     </div>
                 </div>
                 <!-- / END SINGLE SERVICE DESIGN AREA -->
