--- a/layouts/partials/head/metadata-standard.html
+++ b/layouts/partials/head/metadata-standard.html
@@ -1,5 +1,5 @@
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<meta name="description" content="{{ if .IsHome }}{{ .Site.Data.settings.sitedescription }}{{ else if .Description }}{{ .Description }}{{ else }}{{ .Site.Data.settings.sitedescription }}{{ end }}" />
+<meta name="description" content="Dans un emplacement calme, mais facilement accessible, il s'agit de l'endroit idéal pour toute personne rêvant d'avoir son propre petit hâvre de paix" />
 <title>{{.Site.Title}}{{if not .IsHome}} | {{.Title}}{{ else }} | {{.Site.Data.settings.sitetitle}}{{end}}</title>
