--- a/layouts/partials/site-head.html
+++ b/layouts/partials/site-head.html
@@ -3,8 +3,6 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
     <meta name="author" content="Akia Marketing">
     <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -14,14 +12,15 @@
     <meta name="theme-color" content="#ffffff">
     <!-- PAGE TITLE -->
     <title>Hameau Champêtre | Terrains du groupe Norplan</title>
+    <meta name="description" content="Dans un emplacement calme, mais facilement accessible, il s'agit de l'endroit idéal pour toute personne rêvant d'avoir son propre petit hâvre de paix" />
     <!-- ALL GOOGLE FONTS -->
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700,800,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/main.min.css">
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <link rel="stylesheet" href="/assets/css/main.min.css">
+    {{ `<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
 		  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <![endif]-->` | safeHTML }}
 </head>
