--- a/layouts/index.html
+++ b/layouts/index.html
@@ -31,6 +31,7 @@
                     <div class="col-sm-9">
                         <div class="tour-info">
                             <ul>
+                                <li><a href="https://www.facebook.com/lehameauchampetre/" target="_blank" style="color: white"><i class="fa fa-facebook"></i></a></li>
                                 <li class="menu-phone"><a href="tel:+14504735042" style="color: white"><i class="fa fa-phone" style="margin-right: 20px;"></i>450.473.5042</a></li>
                             </ul>
                         </div>
@@ -63,8 +64,10 @@
             <div class="row">
                 <div class="col-sm-12">
                     <div style="margin-bottom: 30px;">
-                        <p>Le Hameau champêtre, c'est un projet bâtit avec une conscience de l'environnement qui l'entoure ! Avec un parc où on retrouve un petit lac, le projet saura vous charmer dès votre arrivée ! Dans un emplacement calme, mais facilement accessible, il s'agit de l'endroit idéal pour toute personne rêvant d'avoir son propre petit hâvre de paix ! Pour une autoconstruction ou bien pour une construction neuve faite par un contracteur, les terrains sont facilement accessibles grâce à la construction d'une nouvelle route, Venez voir notre projet et laissez vous charmer par l'ambiance paisible du Hameau Champêtre.  </p>
+                        <p>Le Hameau champêtre, c'est un projet bâti avec une conscience de l'environnement qui l'entoure. Avec un parc dans lequel on retrouve un petit lac, le projet saura vous charmer dès votre arrivée! Dans un emplacement calme, mais facilement accessible, il s'agit de l'endroit idéal pour toute personne rêvant d'avoir son propre petit havre de paix. Pour une autoconstruction ou bien pour une construction neuve faite par un contracteur, les terrains sont facilement accessibles grâce à la mise en place d'une nouvelle route. Venez voir notre projet et laissez-vous charmer par l'ambiance paisible du Hameau Champêtre.</p>
                     </div>
+                </div>
+                <div class="col-sm-12">
                     <div class="section-title">
                         <h2>Nos terrains</h2>
                         <div id="terrains">
@@ -72,6 +75,8 @@
                             {{ range .Params.terrains }}
                             <span id="t{{.number}}" class="numbers">{{.number}}</span>
                             {{ end }}
+                            <span id="labelparc">Parc</span>
+                            <span id="superficieparc">20 556 mètres carrés</span>
                             <div id="info-div">
                                 <div style="position: relative; width: 100%; height: 100%;">
                                     {{ range .Params.terrains}}
@@ -87,7 +92,7 @@
                             </div>
                         </div>
                         <div id="terrains-mobile">
-                            <img src="/assets/images/bg/plan-norplan-1.png" alt="Plan">
+                            <img src="/assets/images/bg/planfinal.png" alt="Plan" style="margin-bottom: 20px">
                             <p class="title">Chemin de Dunany - Terrains boisés</p>
                             {{ range .Params.terrains}}
                             {{ if eq .groupe 1}}
@@ -110,6 +115,8 @@
                             <p>Terrain {{ .number }} - Superficie: {{.superficie}} - Avec petite étendue d'eau</p>
                             {{ end }}
                             {{ end }}
+                            <p class="title">Parc</p>
+                            <p>Superficie: 20 556 mètres carrés</p>
                         </div>
                     </div>
                 </div>
@@ -118,7 +125,7 @@
     </section>
 
     <!-- START CALL TO ACTION DESIGN AREA -->
-    <section id="download" class="call-to-area" data-stellar-background-ratio="0.6">
+    <section id="download" class="image-bg call-to-area" data-stellar-background-ratio="0.6">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -145,9 +152,9 @@
             </div>
             <div class="tour-list owl-carousel owl-theme">
                 <!-- START SINGLE TOUR PLACE DESIGN AREA -->
-                {{ range .Params.section2.images}}
-                <div class="single-place">
-                    <img src="{{.}}" alt="">
+                {{ range $i, $e := .Params.section2.images}}
+                <div class="single-place" style='width: {{ if eq $i 5 }}581px{{ else }}300px{{end}}'>
+                    <img src="{{$e}}" alt="">
                     <div class="tour-des">
                         <h2>Hameau Champêtre</h2>
                         <h3>Rive-Nord</h3>
@@ -163,7 +170,7 @@
 
 
     <!-- START CALL TO ACTION DESIGN AREA -->
-    <section id="download" class="call-to-area">
+    <section id="download" class="call-to-area image-bg-2">
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
@@ -189,7 +196,7 @@
                         <div class="service-icon"><i class="icon-localisation" aria-hidden="true"></i>
                         </div>
                         <h4>Localisation</h4>
-                        <p>C'est le meilleur des deux mondes; des terains en nature avec tous les services à proximité. À seulement 10 minutes de Lachute! 35 minutes seulement de Laval!</p>
+                        <p>C'est le meilleur des deux mondes; des terrains en nature avec tous les services à proximité. À seulement 10 minutes de Lachute et 35 minutes de Laval!</p>
                     </div>
                 </div>
                 <!-- / END SINGLE SERVICE DESIGN AREA -->
@@ -199,7 +206,7 @@
                         <div class="service-icon"><i class="fa fa-tree" aria-hidden="true"></i>
                         </div>
                         <h4>Ambiance</h4>
-                        <p>Avec des terrains boisés et privés, le Hameau offre une amiance apaisante.</p>
+                        <p>Avec des terrains boisés et privés, le Hameau offre une ambiance apaisante.</p>
                     </div>
                 </div>
                 <!-- / END SINGLE SERVICE DESIGN AREA -->
@@ -228,8 +235,8 @@
                     <div class="single-service">
                         <div class="service-icon"><i class="icon-financement" aria-hidden="true"></i>
                         </div>
-                        <h4>Financement disponible</h4>
-                        <p>Financement hypothécaire disponible, offert par la caisse.</p>
+                        <h4>Financement</h4>
+                        <p>Financement hypothécaire disponible.</p>
                     </div>
                 </div>
                 <!-- / END SINGLE SERVICE DESIGN AREA -->
@@ -386,6 +393,7 @@
                                 <li><a class="smoth-scroll" href="#faits">Faits saillants</a></li>
                                 <li><a class="smoth-scroll" href="#map">Directions</a></li>
                                 <li><a class="smoth-scroll" href="#contact">Contact</a></li>
+                                <li><a href="https://www.facebook.com/lehameauchampetre/" target="_blank">Facebook</a></li>
                             </ul>
                         </div>
                         <h6>&copy;copyright | Groupe Norplan. Tous droits réservés.<br>Fait avec <i class="fa fa-heart"></i> par <a href="https://www.akiamarketing.ca/">Akia Marketing</a></h6>
