--- a/layouts/partials/site-head.html
+++ b/layouts/partials/site-head.html
@@ -1,4 +1,5 @@
 <head>
+    {{ partial "header/google-tag-manager.html" }}
     <!-- META -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
