Tournures de phrase

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -70,7 +70,7 @@
             <div class="row">
                 <div class="col-sm-12">
                     <div style="margin-bottom: 30px;">
-                        <p>Le Hameau champêtre, c'est un projet bâti avec une conscience de l'environnement qui l'entoure. On y retrouve un parc, un petit lac, et de la forêt à perte de vue! Le projet saura vous charmer dès votre arrivée! Situé dans un emplacement paisible, mais facilement accessible,  il s'agit de l'endroit idéal pour toute personne rêvant d'avoir son propre petit havre de paix. Que ce soit pour une autoconstruction ou pour une construction effectuée par un contracteur, nos terrains prêts à bâtir sauront vous convenir à coup sûr. Venez voir notre projet et laissez-vous charmer par l'ambiance paisible du Hameau Champêtre. <a href="#contact">Vous êtes intéressés par le projet ?</a> Nous offrons le service de visite et des séances d'informations privées.</p>
+                        <p>Le Hameau Champêtre, c'est un projet bâti avec une conscience de l'environnement qui l'entoure. On y retrouve un parc, un petit lac, et de la forêt à perte de vue! Le projet saura vous charmer dès votre arrivée! Situé dans un emplacement paisible, mais facilement accessible,  il s'agit de l'endroit idéal pour toute personne rêvant d'avoir son propre petit havre de paix. Que ce soit pour une autoconstruction ou pour une construction effectuée par un contracteur, nos terrains prêts à batir et abordables sauront vous convenir à coup sûr. Venez voir notre projet et laissez-vous charmer par l'ambiance paisible du Hameau Champêtre.
                     </div>
                 </div>
                 <div class="col-sm-12">
@@ -139,7 +139,7 @@
                 <div class="col-md-12">
                     <div class="call-to-area-text text-center">
                         <h2>Vous êtes intéressé par le projet?</h2>
-                        <p>Nous offrons des visites de terrains et des séances d'information privées!</p>
+                        <p>Nous offrons le service de visites et des séances d'information privées!</p>
                         <a class="smoth-scroll cta-btn slide-btn" href="#contact">Appelez-nous</a>
                     </div>
                 </div>
@@ -214,7 +214,7 @@
                         <div class="service-icon"><i class="fa fa-tree" aria-hidden="true"></i>
                         </div>
                         <h4>Ambiance</h4>
-                        <p>Avec des terrains boisés et privés, le Hameau offre une ambiance apaisante.</p>
+                        <p>Avec des terrains boisés et privés, le Hameau Champêtre offre une ambiance apaisante.</p>
                     </div>
                 </div>
                 <!-- / END SINGLE SERVICE DESIGN AREA -->
