--- a/layouts/index.html
+++ b/layouts/index.html
@@ -334,7 +334,7 @@
                 <div class="col-md-12">
                     <!-- START CONTACT FORM DESIGN AREA -->
                     <div class="contact-form">
-                        <form id="contact-form" method="post" action="/" netlify>
+                        <form id="contact-form" method="post" action="/" netlify name="contact-form">
                             <div class="row">
                                 <div class="form-group col-md-4">
                                     <input type="text" name="name" class="form-control" id="first-name" placeholder="Nom*" required="required">
