--- a/layouts/index.html
+++ b/layouts/index.html
@@ -70,7 +70,7 @@
             <div class="row">
                 <div class="col-sm-12">
                     <div style="margin-bottom: 30px;">
-                        <p>Le Hameau Champêtre, c'est un projet bâti avec une conscience de l'environnement qui l'entoure. On y retrouve un parc, un petit lac, et de la forêt à perte de vue! Le projet saura vous charmer dès votre arrivée! Situé dans un emplacement paisible, mais facilement accessible,  il s'agit de l'endroit idéal pour toute personne rêvant d'avoir son propre petit havre de paix. Que ce soit pour une autoconstruction ou pour une construction effectuée par un contracteur, nos terrains prêts à batir et abordables sauront vous convenir à coup sûr. Venez voir notre projet et laissez-vous charmer par l'ambiance paisible du Hameau Champêtre.
+                        <p>Le Hameau Champêtre, c'est un projet bâti avec une conscience de l'environnement qui l'entoure. On y retrouve un parc, un petit lac, et de la forêt à perte de vue! Le projet saura vous charmer dès votre arrivée! Situé dans un emplacement paisible, mais facilement accessible,  il s'agit de l'endroit idéal pour toute personne rêvant d'avoir son propre petit havre de paix. Que ce soit pour une autoconstruction ou pour une construction effectuée par un contracteur, nos terrains prêts à bâtir et abordables sauront vous convenir à coup sûr. Venez voir notre projet et laissez-vous charmer par l'ambiance paisible du Hameau Champêtre.
                     </div>
                 </div>
                 <div class="col-sm-12">
