--- a/layouts/index.html
+++ b/layouts/index.html
@@ -158,7 +158,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row" style="margin: 0; padding: 0 10px;">
+            <div class="row" style="margin: 0; padding: 0 0 0 10px;">
                 <script src="https://fast.wistia.com/embed/medias/nnieaolljx.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_nnieaolljx videoFoam=true" style="height:100%;width:100%">&nbsp;</div></div></div>
             </div>
             <div class="tour-list owl-carousel owl-theme">
