--- a/layouts/index.html
+++ b/layouts/index.html
@@ -350,6 +350,7 @@
                                 </div>
                                 <div class="form-group col-md-12">
                                     <textarea rows="6" name="message" class="form-control" id="description" placeholder="Votre message*" required="required"></textarea>
+                                    <div data-netlify-recaptcha></div>
                                 </div>
                                 <div class="col-md-12 text-center">
                                     <div class="actions wow fadeInUp" data-wow-delay=".4s">
