Added new image

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -384,7 +384,7 @@
                         <img src="{{.lien}}" alt="">
                         <div class="tour-des">
                             <h2>{{ .projet }}</h2>
-                            <h3>Contactez-nous pour avoir de l'information sur nos autres projets</h3>
+                            <h3>{{ .description }}</h3>
                         </div>
                     </div>
                 </a>
